# letsh-api

./: .gitignore  Pipfile  README.MD  README.md  build.sh  pyproject.toml  render.yaml
accomodations/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
accomodations/migrations/: 0001_initial.py  0002_amenity_room_number_of_beds.py  0002_room_is_free_booking_cancelation.py  0003_alter_room_amenities_alter_room_owner.py  0003_amenity_description_room_amenities.py  0004_alter_amenity_options_alter_amenity_table.py  0004_room_room_category_alter_amenity_table.py  0005_remove_amenity_created_at_remove_amenity_description_and_more.py  0006_rename_desription_amenity_description.py  0007_remove_room_room_category_room_category.py  0008_alter_room_owner.py  0009_alter_room_category.py  0010_alter_room_category.py  0011_alter_room_category.py  (+3 more)
bookings/: admin.py  models.py  serializers.py
categories/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
common/: models.py  permissions.py
config/: settings.py  urls.py
favourites/: admin.py  models.py  serializers.py  urls.py  views.py
i18n_switcher/: apps.py
parkings/: admin.py  models.py
photos/: admin.py  models.py  serializers.py  urls.py  views.py
reservations/: admin.py  models.py  serializers.py
reviews/: admin.py  models.py  serializers.py
rooms/: admin.py  models.py  paginations.py  permissions.py  serializers.py  tests.py  urls.py  views.py
tokens/: serializers.py  urls.py  views.py
transportations/: admin.py  apps.py  models.py
user_media/: admin.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
(+102 files in other folders)
