[tool.poetry]
name = "letsh-api"
version = "0.1.0"
description = ""
authors = ["donghhan <apensia914@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
djangorestframework = "^3.14.0"
pillow = "^9.5.0"
django-cities-light = "^3.9.2"
drf-yasg = "^1.21.5"
djangorestframework-simplejwt = "^5.2.2"
django-cors-headers = "^4.0.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
black = "^23.3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
